# Arxia

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmarks.yml  esp32.yml  security-audit.yml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/token-lock/src/: lib.rs
crates/arxia-bench/: Cargo.toml
crates/arxia-bench/src/: lib.rs
crates/arxia-consensus/: Cargo.toml
crates/arxia-consensus/src/: conflict.rs  delegation.rs  lib.rs  orv.rs  quorum.rs  vote.rs
crates/arxia-core/: Cargo.toml
crates/arxia-core/src/: constants.rs  error.rs  lib.rs  types.rs
crates/arxia-crdt/: Cargo.toml
crates/arxia-crdt/src/: lib.rs  or_set.rs  pn_counter.rs  pruning.rs  reconciliation.rs  vector_clock.rs
crates/arxia-crypto/src/: blake3_hash.rs  chacha20.rs  ed25519.rs  lib.rs  slip39.rs
crates/arxia-did/: Cargo.toml
crates/arxia-did/src/: lib.rs
crates/arxia-finality/: Cargo.toml
crates/arxia-finality/src/: lib.rs
crates/arxia-gossip/: Cargo.toml
crates/arxia-gossip/src/: lib.rs  message.rs  node.rs  nonce_registry.rs  signed_message.rs
crates/arxia-lattice/src/: block.rs  chain.rs  ledger.rs  serialization.rs  validation.rs
crates/arxia-proto/: Cargo.toml  build.rs
crates/arxia-proto/proto/: arxia.proto  transport.proto
crates/arxia-proto/src/: lib.rs  validation.rs
crates/arxia-relay/: Cargo.toml
crates/arxia-relay/src/: lib.rs  receipt.rs  scoring.rs  slashing.rs
crates/arxia-storage/: Cargo.toml
crates/arxia-storage/src/: lib.rs
crates/arxia-transport/: Cargo.toml
crates/arxia-transport/src/: lib.rs  reassembly.rs  traits.rs
crates/arxia-transport/src/sim/: simulated.rs
docs/: SECURITY_INTERFACES.md
docs/aips/: AIP-0001-gossip-protocol.md  TEMPLATE.md
docs/architecture/: BLOCK_LATTICE.md  CRDT.md  DID.md  FINALITY.md  GOSSIP.md  ORV.md  OVERVIEW.md  TRANSPORT.md  WASM.md
docs/guides/: GETTING_STARTED.md  HARDWARE_SETUP.md  RUNNING_A_NODE.md  WRITING_CONTRACTS.md
docs/protocol/: CRYPTOGRAPHY.md  FINALITY_MODEL.md  GOVERNANCE.md  SERIALIZATION.md  TOKENOMICS.md
docs/research/: HELIUM_LESSONS.md  OFFLINE_CONSENSUS.md  THREAT_MODEL.md
examples/did_issuance/: Cargo.toml
examples/did_issuance/src/: main.rs
examples/mesh_relay/: Cargo.toml
examples/mesh_relay/src/: main.rs
examples/offline_payment/: Cargo.toml
examples/offline_payment/src/: main.rs
targets/esp32/src/: lib.rs
tools/arxia-cli/src/: main.rs
tools/arxia-inspector/: Cargo.toml
tools/arxia-inspector/src/: main.rs
