[workspace]
resolver = "2"
members = [
    "crates/arxia-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
rust-version = "1.85.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/arxialayer1/arxia"
homepage = "https://arxia.network"
description = "Layer 1 blockchain for offline-first mesh consensus"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "1"
