[workspace]
resolver = "2"
members = [
    "crates/arxia-core",
    "crates/arxia-crypto",
    "crates/arxia-lattice",
    "crates/arxia-crdt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
rust-version = "1.85.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/arxialayer1/arxia"
homepage = "https://arxia.network"
description = "Layer 1 blockchain for offline-first mesh consensus"

[workspace.dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
chacha20poly1305 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.8"
thiserror = "1"
arxia-core = { path = "crates/arxia-core" }
arxia-crypto = { path = "crates/arxia-crypto" }
arxia-lattice = { path = "crates/arxia-lattice" }
