[package]
name = "arxia-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Benchmarks for Arxia crates"
authors = []

[dependencies]
arxia-core = { path = "../arxia-core" }
arxia-crypto = { path = "../arxia-crypto" }
arxia-lattice = { path = "../arxia-lattice" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false
