[package]
name = "arxia-finality"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Finality assessment for Arxia transactions"
authors = []

[dependencies]
arxia-core = { path = "../arxia-core" }
arxia-crypto = { path = "../arxia-crypto" }
arxia-gossip = { path = "../arxia-gossip" }
serde = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
