[package]
name = "arxia-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Relay node scoring, batching, and receipt management"
authors = []

[dependencies]
arxia-core = { path = "../arxia-core" }
arxia-crypto = { path = "../arxia-crypto" }
hex = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
