[package]
name = "mesh_relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Example: mesh relay forwarding"
authors = []

[dependencies]
arxia-core = { path = "../../crates/arxia-core" }
arxia-crypto = { path = "../../crates/arxia-crypto" }
arxia-transport = { path = "../../crates/arxia-transport" }
arxia-relay = { path = "../../crates/arxia-relay" }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
